assets/css/style.css
/* ... */
@media(max-width : 991px) {


    #dashboard .list-doctor {
        width: 100%;
    }

    #dashboard .document-patient {
        width: 100%;
    }

    #dashboard .doctor-dashboard {
        flex-direction: column;
    }

    #dashboard .doctor-dashboard {
        padding-left: 0;
    }

    #dashboard .image-patient {

        width: 60px;
        height: 60px;

    }
}

@media(max-width :768px) {
    #dashboard .details-meeting {
        flex-direction: column;
    }

    #dashboard .meeting-patient {
        width: 100%;
    }

    #dashboard .input-filed-speciality {
        float: initial;
    }

    #dashboard .btn-patient {
        width: 100%;
    }

    #dashboard .style-dropdown-menu {
        width: 100%;
    }

    #dashboard .top-card {
        flex-direction: column;
        text-align: center;
    }

    #dashboard .next-appointment,
    .number-appointment {
        justify-content: center;
    }

    #dashboard .card-of-doctor {
        padding: 20px 14px 32px 14px;
    }

    #dashboard .file-image,
    .patient-name {
        margin: 0 auto;
    }

    #dashboard .left-details,
    .right-details {
        flex-direction: column;
    }

    #dashboard .type-paper,
    .patient-name {
        flex-direction: column;
        text-align: center;

    }

    #dashboard .patient-name {
        flex-direction: column;
        text-align: center;
    }

    #dashboard .taked-document {
        justify-content: center;
    }

    #dashboard .piture-space {
        margin: 0 auto;
    }

    #dashboard .row-document {
        flex-direction: column-reverse;
    }

    #dashboard .img-consult {
        margin-top: 6px;
    }

    #dashboard .hr {
        width: 100%;
        margin-left: 0;
    }

}

/*--------------------------------------------------------------
# 6- Page Home Doctor
--------------------------------------------------------------*/

/*--------------------------------------------------------------
# Section Health
--------------------------------------------------------------*/
#health .hero-health {
    border-radius: 0px 0px 103px 103px;
    background: #0CB8B6;

}

#health .health-doctor {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

#health .title-hero-health {

    font-family: 'Poppins';
    font-size: 36px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    margin-bottom: 28px;
}

#health .title-hero-health span:nth-child(1) {
    color: #fff;
}

#health .title-hero-health span:nth-child(2) {
    color: #2B7A79;
}

#health .form-control:focus {
    box-shadow: none;
}

#health .form-control {
    cursor: pointer;
}

#health .input-speciality::placeholder {
    opacity: 0.7;
}

#health .input-speciality {
    width: 302px;
    max-width: 100%;
    height: 64px;
    background-image: url('../img/search-input.svg');
    background-position: 12px center;
    background-repeat: no-repeat;
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 21px;
    color: #CCC;
    padding-left: 35px;
    border: 1px solid #e5e5e6;
    border-radius: 10px;
    background-color: #fdfdfe;
}

#health .input-where-place::placeholder {
    opacity: 0.7;
}

#health .input-where-place {
    width: 155px;
    max-width: 100%;
    height: 64px;
    background-image: url('../img/location.svg');
    background-position: 12px center;
    background-repeat: no-repeat;
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 21px;
    color: #CCC;
    padding-left: 35px;
    border: 1px solid #e5e5e6;
    border-radius: 10px;
    background-color: #fdfdfe;
}

#health .btn-location {
    border-radius: 10px;
    border: 1px solid #0CB8B6;
    background: #15a19f;
    padding: 18px;

}

#health .btn-search-doctor {
    color: #FFF;
    font-family: 'Poppins';
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    border: none;
    width: 100%;
    padding: 15px 0;
    margin-top: 20px;
    position: relative;
}

#health .style-btn-search-doctor {
    border-radius: 10px;
    background: #2B7A79;
    box-shadow: -5px 50px 74px -4px rgba(141, 141, 141, 0.10), 0px 0px 1px 0px rgba(0, 0, 0, 0.37) inset;
}

#health .inputs-search-doctors {
    display: flex;
    gap: 8px;
}

#health .img-group-doctor {
    width: 75%;
    float: right;
}

#health .arrow-img-style {
    position: absolute;
    right: 25px;
}

@media(max-width : 1200px) {
    #health .health-doctor {
        padding-bottom: 40px;
    }
}

@media(max-width : 1100px) {
    #health .health-doctor {
        flex-direction: column;
        padding-top: 40px;
    }

    #health .search-doctor {
        width: 100%;
    }

    #health .inputs-search-doctors {
        flex-direction: column;
    }

    #health .input-speciality,
    .input-where-place {
        width: 100%;
    }

    #health .input-where-place {
        width: 100%;

    }

    #health .group-doctors {
        text-align: center;
    }

    #health .img-group-doctor {
        float: none;

    }

    #health .health-doctor {
        margin-bottom: 0;
    }
}

@media(max-width : 576px) {
    #health .hero-health {
        border-radius: 0;
    }
}

/*--------------------------------------------------------------
# Section Partner Health
--------------------------------------------------------------*/
#partner-health {
    padding-top: 54px;
}

#partner-health .title-partner {
    color: #33485B;
    font-family: 'Poppins';
    font-size: 36px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    text-align: center;
}

#partner-health .title-partner span {
    color: #2B7A79;
}

#partner-health .item-for-carousel {
    display: flex;
    align-items: center;
    width: 80%;
    margin: 0 auto;
}
/* ... */

